--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@oclif/command": "1.5.18",
     "@oclif/config": "1.13.2",
     "child_process": "1.0.2",
-    "chptr": "file:../chptr",
+    "chptr": "0.1.0",
     "cli-ux": "5.3.1",
     "save-dev": "2.0.0",
     "tslib": "1.10.0",
