--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "chptr-antidote-plugin",
   "description": "An extension to Chptr to enable a smooth workflow with Antidote, a language-checker software.",
-  "version": "0.0.0",
-  "author": "spikying @spikying",
+  "version": "0.1.0",
+  "author": {
+    "name": "Mathieu Leblanc",
+    "email": "spiky.ing@gmail.com",
+    "url": "https://github.com/spikying"
+  },
   "bugs": "https://github.com/spikying/chptr-antidote-plugin/issues",
   "dependencies": {
     "@oclif/command": "1.5.18",
@@ -10,7 +14,6 @@
     "child_process": "1.0.2",
     "chptr": "0.1.0",
     "cli-ux": "5.3.1",
-    "save-dev": "2.0.0",
     "tslib": "1.10.0",
     "tslint-config-prettier": "1.18.0"
   },
@@ -41,7 +44,10 @@
   ],
   "homepage": "https://github.com/spikying/chptr-antidote-plugin",
   "keywords": [
-    "oclif-plugin"
+    "oclif-plugin",
+    "chptr-antidote-plugin",
+    "chptr-plugin",
+    "chptr"
   ],
   "license": "MIT",
   "oclif": {
@@ -51,7 +57,7 @@
       "@oclif/plugin-help"
     ]
   },
-  "repository": "spikying/chptr-antidote-plugin",
+  "repository": "git@github.com:spikying/chptr-antidote-plugin.git",
   "scripts": {
     "postpack": "rimraf oclif.manifest.json",
     "posttest": "echo tslint -p test -t stylish",
