--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@oclif/command": "1.7.0",
     "@oclif/config": "1.16.0",
     "child_process": "1.0.2",
-    "chptr": "0.3.1",
+    "chptr": "0.3.6",
     "cli-ux": "5.4.9",
+    "tmp-promise": "3.0.2",
     "tslib": "2.0.0",
     "tslint-config-prettier": "1.18.0"
   },
