--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "rimraf": "3.0.2",
     "ts-node": "8.10.2",
     "tslint": "6.1.2",
-    "typescript": "3.9.7"
+    "typescript": "3.9.7",
+    "node-notifier": ">=8.0.1"
   },
   "engines": {
     "node": ">=8.0.0"
